# ftp-server-gui

./: .gitignore  README.md  build.bat  ftp_gui.py  pyproject.toml
