[project]
name = "ftp-server-gui"
version = "1.1.0"
description = "Simple FTP server with GUI with python - with windows exe"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "imageio>=2.37.0",
    "nuitka==2.7.14",
    "pillow>=11.1.0",
    "pyftpdlib==2.1.0",
    "pyinstaller>=6.11.1",
    "pyopenssl>=25.3.0",
    "pyqtdarktheme-fork>=2.3.4",
    "pyside6>=6.8.2.1",
]
